dotCMS/core#23799 fix gaps of query dialog close button and content

--- a/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
+++ b/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
@@ -10477,6 +10477,10 @@ a.category_higlighted, a.tag_higlighted {
 
 .content-search__show-query-dialog .dijitDialogTitleBar {
   z-index: 1;
+  width: inherit !important;
+}
+.content-search__show-query-dialog .dijitDialogPaneContent {
+  width: inherit !important;
 }
 
 .content-search__key-fields {
